crates/compiler/mir/tests/snapshots/mir_generation_tests__control_flow_simple_for.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: simple_for.cm
============================================================
Source code:
fn test_simple_for() -> felt {
    //!ASSERT FUNCTION_COUNT: 1

    let sum = 0;

    for (let i = 0; i != 10; i = i + 1) {
        sum = sum + i;
    }

    return sum;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_simple_for {
    entry: 0

    0:
      %0 = stackalloc 1
      store %0, 0
      %1 = stackalloc 1
      store %1, 0
      jump 1

    1:
      if %1 Neq 10 then jump 2 else jump 4

    2:
      %0 = %0 Add %1
      jump 3

    3:
      %1 = %1 Add 1
      jump 1

    4:
      return %0

  }

}
