crates/compiler/mir/tests/snapshots/mir_generation_tests__expressions_compound_expr.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: compound_expr.cm
============================================================
Source code:
//!ASSERT CONTAINS: Add
//!ASSERT CONTAINS: Sub
//!ASSERT CONTAINS: Mul

// Tests a more complex expression involving parentheses and multiple variables.
fn test_complex(x: felt, y: felt) -> felt {
    let temp = x + y;
    let result = temp * (x - y);
    return result;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_complex {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = stackalloc 1
      %2 = %0 Add %1
      %3 = %0 Sub %1
      %4 = stackalloc 1
      %4 = %2 Mul %3
      return %4

  }

}
