crates/compiler/mir/tests/snapshots/mir_generation_tests__functions_call_as_statement.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: call_as_statement.cm
============================================================
Source code:
//!ASSERT CONTAINS: %0 = call 0()

// Tests a function call used as a statement, where the return value is ignored.
// This generates a call instruction with a destination that is not used.
fn helper() -> felt { return 123; }

fn main() -> felt {
    helper(); // Call in statement context
    return 0;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn helper {
    entry: 0

    0:
      return 123

  }

  // Function 1
  fn main {
    entry: 0

    0:
      %0 = call 0()
      return 0

  }

}
