crates/compiler/mir/tests/snapshots/mir_generation_tests__functions_fib.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: fib.cm
============================================================
Source code:
fn main() -> felt {
    let n = 10;
    let result = fib(n);
    return result;
}

fn fib(n: felt) -> felt {
    if (n == 0) {
        return 0;
    }
    if (n == 1) {
        return 1;
    }
    let res1 = fib(n - 1);
    let res2 = fib(n - 2);
    return res1 + res2;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %0 = 10
      %1 = call 1(%0)
      return %1

  }

  // Function 1
  fn fib {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 0

    2:
      if %0 Eq 1 then jump 3 else jump 4

    3:
      return 1

    4:
      %3 = %0 Sub 1
      %4 = call 1(%3)
      %5 = %0 Sub 2
      %6 = call 1(%5)
      %7 = %4 Add %6
      return %7

  }

}
